tests/golden/3-basic-and-simple-literals/valid/lenient/implicit-null-literal-3.yini
^ App
    ^^ ImplicitNullInLenient
    val1 = 300
    val2 =
    val3 = "Some text."
