tests/golden/3-basic-and-simple-literals/invalid/strict/bad-implicit-null-literal-3.yini
^ App
    ^^ BadImplicitNullInStrict
    val1 = 300
    val2 =
    val3 = "Some text."
